{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 1671,
  "lineage": "60815752-69e2-a36f-50b2-db60c3fe9e9a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03536809374fcbebc",
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:elastic-ip/eipalloc-03536809374fcbebc",
            "association_id": "eipassoc-0d1fa1cd0f52140f4",
            "domain": "vpc",
            "id": "eipalloc-03536809374fcbebc",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-04e793d2525b936eb",
            "private_dns": "ip-192-168-20-183.ap-northeast-2.compute.internal",
            "private_ip": "192.168.20.183",
            "public_dns": "ec2-3-34-110-31.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.110.31",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "aws_web_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b793e03812de20d6",
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:instance/i-0a89f32ca04162ef2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a89f32ca04162ef2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "public-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b166a9aeefd9bbac",
            "private_dns": "ip-192-168-10-205.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.10.205",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0dc39d58d93d1d731",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01a6a311115dc25e9",
              "sg-0432a2d0b757a674a",
              "sg-0cac8e62dbeb0926e",
              "sg-0d6c8dbd417417a17"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e2c712b2ef8813da",
            "tags": {
              "Name": "web_server_instance_0"
            },
            "tags_all": {
              "Name": "web_server_instance_0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a6a311115dc25e9",
              "sg-0432a2d0b757a674a",
              "sg-0cac8e62dbeb0926e",
              "sg-0d6c8dbd417417a17"
            ]
          },
          "dependencies": [
            "aws_security_group.http_open",
            "aws_security_group.https_open",
            "aws_security_group.icmpopen",
            "aws_security_group.public_bastion_host_sg",
            "aws_subnet.private_web_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b793e03812de20d6",
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:instance/i-006533c2cee273e8d",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-006533c2cee273e8d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "public-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00fcfa6def1679603",
            "private_dns": "ip-192-168-11-135.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.11.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e15600bbc5661521",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01a6a311115dc25e9",
              "sg-0432a2d0b757a674a",
              "sg-0cac8e62dbeb0926e",
              "sg-0d6c8dbd417417a17"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0764dea9402102203",
            "tags": {
              "Name": "web_server_instance_1"
            },
            "tags_all": {
              "Name": "web_server_instance_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a6a311115dc25e9",
              "sg-0432a2d0b757a674a",
              "sg-0cac8e62dbeb0926e",
              "sg-0d6c8dbd417417a17"
            ]
          },
          "dependencies": [
            "aws_security_group.http_open",
            "aws_security_group.https_open",
            "aws_security_group.icmpopen",
            "aws_security_group.public_bastion_host_sg",
            "aws_subnet.private_web_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b793e03812de20d6",
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:instance/i-013a27279466e3c26",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-013a27279466e3c26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "public-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0497bd06ed9217a01",
            "private_dns": "ip-192-168-12-95.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.12.95",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0afc5da27e013ebba",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-01a6a311115dc25e9",
              "sg-0432a2d0b757a674a",
              "sg-0cac8e62dbeb0926e",
              "sg-0d6c8dbd417417a17"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-097c849ba4333c4c5",
            "tags": {
              "Name": "web_server_instance_2"
            },
            "tags_all": {
              "Name": "web_server_instance_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01a6a311115dc25e9",
              "sg-0432a2d0b757a674a",
              "sg-0cac8e62dbeb0926e",
              "sg-0d6c8dbd417417a17"
            ]
          },
          "dependencies": [
            "aws_security_group.http_open",
            "aws_security_group.https_open",
            "aws_security_group.icmpopen",
            "aws_security_group.public_bastion_host_sg",
            "aws_subnet.private_web_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-040c33c6a51fd5d96",
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:instance/i-0e629ba7e5d920d9e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e629ba7e5d920d9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "public-ec2-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0188750fd509939e8",
            "private_dns": "ip-192-168-16-105.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.16.105",
            "public_dns": "ec2-3-34-123-77.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.123.77",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0adf0f76e4e016f63",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0cac8e62dbeb0926e",
              "sg-0d6c8dbd417417a17"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b577b6ab77e7c5c8",
            "tags": {
              "Name": "web_service_bastion_host_instance"
            },
            "tags_all": {
              "Name": "web_service_bastion_host_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cac8e62dbeb0926e",
              "sg-0d6c8dbd417417a17"
            ]
          },
          "dependencies": [
            "aws_security_group.icmpopen",
            "aws_security_group.public_bastion_host_sg",
            "aws_subnet.public_bastion_host_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:internet-gateway/igw-0790cb0a789cfdd46",
            "id": "igw-0790cb0a789cfdd46",
            "owner_id": "137068221242",
            "tags": {
              "Name": "web_service_internet_gateway"
            },
            "tags_all": {
              "Name": "web_service_internet_gateway"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_servcer_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:loadbalancer/app/webServiceAlb/4dfedac74ce52d13",
            "arn_suffix": "app/webServiceAlb/4dfedac74ce52d13",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "webServiceAlb-404354207.ap-northeast-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:loadbalancer/app/webServiceAlb/4dfedac74ce52d13",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "webServiceAlb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0cac8208262ac7db9"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08142d2e3373022f6"
              },
              {
                "subnet_id": "subnet-0e97609a1b20d367c"
              }
            ],
            "subnets": [
              "subnet-08142d2e3373022f6",
              "subnet-0e97609a1b20d367c"
            ],
            "vpc_id": "vpc-0cd85170ed5f09d8f",
            "xff_header_processing_mode": "append",
            "zone_id": "ZWKZPGTI48KDX"
          },
          "dependencies": [
            "aws_security_group.web_alb_sg",
            "aws_subnet.public_elb_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http80",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:listener/app/webServiceAlb/4dfedac74ce52d13/8dcf80954b58e6fb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:listener/app/webServiceAlb/4dfedac74ce52d13/8dcf80954b58e6fb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:loadbalancer/app/webServiceAlb/4dfedac74ce52d13",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_servcer_loadbalancer",
            "aws_security_group.web_alb_sg",
            "aws_subnet.public_elb_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:listener/app/webServiceAlb/4dfedac74ce52d13/7743968cb8786dff",
            "certificate_arn": "arn:aws:acm:ap-northeast-2:137068221242:certificate/699e2e65-4fec-45a5-a732-c5d9b8914f4d",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [
                  {
                    "stickiness": [
                      {
                        "duration": 0,
                        "enabled": false
                      }
                    ],
                    "target_group": [
                      {
                        "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049",
                        "weight": 1
                      }
                    ]
                  }
                ],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:listener/app/webServiceAlb/4dfedac74ce52d13/7743968cb8786dff",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:loadbalancer/app/webServiceAlb/4dfedac74ce52d13",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_servcer_loadbalancer",
            "aws_lb_target_group.web_server_loadbalancer_tg",
            "aws_security_group.web_alb_sg",
            "aws_subnet.public_elb_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_server_loadbalancer_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049",
            "arn_suffix": "targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:loadbalancer/app/webServiceAlb/4dfedac74ce52d13"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-service-loadbalancer-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "regist_web_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049-20241125080803616300000005",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049",
            "target_id": "i-0a89f32ca04162ef2"
          },
          "dependencies": [
            "aws_instance.aws_web_servers",
            "aws_lb_target_group.web_server_loadbalancer_tg",
            "aws_security_group.http_open",
            "aws_security_group.https_open",
            "aws_security_group.icmpopen",
            "aws_security_group.public_bastion_host_sg",
            "aws_subnet.private_web_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049-20241125080803685700000006",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049",
            "target_id": "i-006533c2cee273e8d"
          },
          "dependencies": [
            "aws_instance.aws_web_servers",
            "aws_lb_target_group.web_server_loadbalancer_tg",
            "aws_security_group.http_open",
            "aws_security_group.https_open",
            "aws_security_group.icmpopen",
            "aws_security_group.public_bastion_host_sg",
            "aws_subnet.private_web_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049-20241125080803787300000007",
            "port": 8080,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-2:137068221242:targetgroup/web-service-loadbalancer-tg/cad1e1a0e3b65049",
            "target_id": "i-013a27279466e3c26"
          },
          "dependencies": [
            "aws_instance.aws_web_servers",
            "aws_lb_target_group.web_server_loadbalancer_tg",
            "aws_security_group.http_open",
            "aws_security_group.https_open",
            "aws_security_group.icmpopen",
            "aws_security_group.public_bastion_host_sg",
            "aws_subnet.private_web_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "web_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03536809374fcbebc",
            "association_id": "eipassoc-0d1fa1cd0f52140f4",
            "connectivity_type": "public",
            "id": "nat-0552ffcf57cc91fa8",
            "network_interface_id": "eni-04e793d2525b936eb",
            "private_ip": "192.168.20.183",
            "public_ip": "3.34.110.31",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0dec38a43ee2a0b63",
            "tags": {
              "Name": "web_nat_gateway"
            },
            "tags_all": {
              "Name": "web_nat_gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "web_nat_gateway_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:network-acl/acl-09195c947638b54eb",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-09195c947638b54eb",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 65534
              }
            ],
            "owner_id": "137068221242",
            "subnet_ids": [
              "subnet-0dec38a43ee2a0b63"
            ],
            "tags": {
              "Name": "nat_gateway_acl"
            },
            "tags_all": {
              "Name": "nat_gateway_acl"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "nat_network_acl_",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-01eefd42e6aaaabc8",
            "network_acl_id": "acl-09195c947638b54eb",
            "subnet_id": "subnet-0dec38a43ee2a0b63"
          },
          "dependencies": [
            "aws_network_acl.web_nat_gateway_nacl",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:route-table/rtb-0ecc348a76307b337",
            "id": "rtb-0ecc348a76307b337",
            "owner_id": "137068221242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0790cb0a789cfdd46",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "internet_route_table"
            },
            "tags_all": {
              "Name": "internet_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_nat_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:route-table/rtb-056522c5256030182",
            "id": "rtb-056522c5256030182",
            "owner_id": "137068221242",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0552ffcf57cc91fa8",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "nat_gateway_route_table"
            },
            "tags_all": {
              "Name": "nat_gateway_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.web_nat_gateway",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elb_route_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a7b727c2135731d",
            "route_table_id": "rtb-0ecc348a76307b337",
            "subnet_id": "subnet-08142d2e3373022f6"
          },
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.internet_route_table",
            "aws_subnet.public_elb_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021bd53da24a5bc35",
            "route_table_id": "rtb-0ecc348a76307b337",
            "subnet_id": "subnet-0e97609a1b20d367c"
          },
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.internet_route_table",
            "aws_subnet.public_elb_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nat_nat_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af4516d0c6dec1bd",
            "route_table_id": "rtb-0ecc348a76307b337",
            "subnet_id": "subnet-0dec38a43ee2a0b63"
          },
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.internet_route_table",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_route_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eca2c4df87b797b0",
            "route_table_id": "rtb-056522c5256030182",
            "subnet_id": "subnet-0ddab6ee550cfaed3"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.web_nat_gateway",
            "aws_route_table.private_nat_route_table",
            "aws_subnet.private_db_subnet",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0781503df4406c6df",
            "route_table_id": "rtb-056522c5256030182",
            "subnet_id": "subnet-000973b11b775b1e0"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.web_nat_gateway",
            "aws_route_table.private_nat_route_table",
            "aws_subnet.private_db_subnet",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0581f6506773ffc3c",
            "route_table_id": "rtb-056522c5256030182",
            "subnet_id": "subnet-08efecb80001413fa"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.web_nat_gateway",
            "aws_route_table.private_nat_route_table",
            "aws_subnet.private_db_subnet",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_web_route_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001c1e873e354a015",
            "route_table_id": "rtb-056522c5256030182",
            "subnet_id": "subnet-0e2c712b2ef8813da"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.web_nat_gateway",
            "aws_route_table.private_nat_route_table",
            "aws_subnet.private_web_subnet",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08770aad798c823cc",
            "route_table_id": "rtb-056522c5256030182",
            "subnet_id": "subnet-0764dea9402102203"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.web_nat_gateway",
            "aws_route_table.private_nat_route_table",
            "aws_subnet.private_web_subnet",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea91a021b09c158",
            "route_table_id": "rtb-056522c5256030182",
            "subnet_id": "subnet-097c849ba4333c4c5"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.web_nat_gateway",
            "aws_route_table.private_nat_route_table",
            "aws_subnet.private_web_subnet",
            "aws_subnet.public_nat_subnet",
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_bastion_host_subnet_route_associate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c1af7cdda431a225",
            "route_table_id": "rtb-0ecc348a76307b337",
            "subnet_id": "subnet-0b577b6ab77e7c5c8"
          },
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.internet_route_table",
            "aws_subnet.public_bastion_host_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_open",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:security-group/sg-01a6a311115dc25e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a6a311115dc25e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241125061520417100000007",
            "name_prefix": "terraform-",
            "owner_id": "137068221242",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "https_open",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:security-group/sg-0432a2d0b757a674a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0432a2d0b757a674a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20241125061520015500000005",
            "name_prefix": "terraform-",
            "owner_id": "137068221242",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "icmpopen",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:security-group/sg-0d6c8dbd417417a17",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d6c8dbd417417a17",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              }
            ],
            "name": "terraform-20241125061520015500000006",
            "name_prefix": "terraform-",
            "owner_id": "137068221242",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_bastion_host_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:security-group/sg-0cac8e62dbeb0926e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cac8e62dbeb0926e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241125061520014700000004",
            "name_prefix": "terraform-",
            "owner_id": "137068221242",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:security-group/sg-00f6e81937aa72d0a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00f6e81937aa72d0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "137068221242",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:security-group/sg-0cac8208262ac7db9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cac8208262ac7db9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20241125061520014700000003",
            "name_prefix": "terraform-",
            "owner_id": "137068221242",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-0ddab6ee550cfaed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.13.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ddab6ee550cfaed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_db_subnet1"
            },
            "tags_all": {
              "Name": "web_db_subnet1"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-000973b11b775b1e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.14.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-000973b11b775b1e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_db_subnet2"
            },
            "tags_all": {
              "Name": "web_db_subnet2"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-08efecb80001413fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.15.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08efecb80001413fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_db_subnet3"
            },
            "tags_all": {
              "Name": "web_db_subnet3"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-0e2c712b2ef8813da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2c712b2ef8813da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_web_subnet1"
            },
            "tags_all": {
              "Name": "web_web_subnet1"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-0764dea9402102203",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0764dea9402102203",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_web_subnet2"
            },
            "tags_all": {
              "Name": "web_web_subnet2"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-097c849ba4333c4c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097c849ba4333c4c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_web_subnet3"
            },
            "tags_all": {
              "Name": "web_web_subnet3"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_bastion_host_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-0b577b6ab77e7c5c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b577b6ab77e7c5c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_bastion_host_subnet"
            },
            "tags_all": {
              "Name": "public_bastion_host_subnet"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_elb_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-08142d2e3373022f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08142d2e3373022f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elb_public_subnet1"
            },
            "tags_all": {
              "Name": "elb_public_subnet1"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-0e97609a1b20d367c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "192.168.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e97609a1b20d367c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "elb_public_subnet2"
            },
            "tags_all": {
              "Name": "elb_public_subnet2"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_nat_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:subnet/subnet-0dec38a43ee2a0b63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dec38a43ee2a0b63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "137068221242",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web_nat_subnet"
            },
            "tags_all": {
              "Name": "web_nat_subnet"
            },
            "vpc_id": "vpc-0cd85170ed5f09d8f"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:137068221242:vpc/vpc-0cd85170ed5f09d8f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0588e982538b66603",
            "default_route_table_id": "rtb-0a45685dee05d0e79",
            "default_security_group_id": "sg-0545b37844f042385",
            "dhcp_options_id": "dopt-0733a85c2facd91b2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cd85170ed5f09d8f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a45685dee05d0e79",
            "owner_id": "137068221242",
            "tags": {
              "Name": "web_service_vpc"
            },
            "tags_all": {
              "Name": "web_service_vpc"
            }
          }
        }
      ]
    }
  ]
}